// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot1 1`] = `
<DocumentFragment>
  <div
    class="button-style"
    data-testid="button"
  >
    save
  </div>
</DocumentFragment>
`;

exports[`matches snapshot2 1`] = `
<DocumentFragment>
  <div
    class="button-style"
    data-testid="button"
  >
    Hello
  </div>
</DocumentFragment>
`;
